json xml mapper

--- a/JaxRS1/src/main/webapp/index.html
+++ b/JaxRS1/src/main/webapp/index.html
@@ -9,6 +9,8 @@
 		<li><a href="api/">Show Greeting Message</a>
 		<li><a href="api/pojo">Show PathParam Greeting Message</a>
 		<li><a href="api/mediatypetest">Show Media Message</a>
+		<li><a href="api/msg">Get All Message</a>
+		<li><a href="api/msg/json">Get All Message in JSON Format</a>
 	</ul>
 	<form method="post" action="api/save">
 		<label for="id">ID:</label><input type="text" name="id"/>
