DefaultValue Annotation usage

--- a/JaxRS1/src/main/webapp/index.html
+++ b/JaxRS1/src/main/webapp/index.html
@@ -7,7 +7,8 @@
 <body>
 	<ul>
 		<li><a href="api/">Show Greeting Message</a>
-		<li><a href="api/pojo">Show PathParam Greeting Message</a>
+		<li><a href="api/test">Show Default PathParam Greeting Message</a>
+		<li><a href="api/test/pojo">Show PathParam Greeting Message</a>
 		<li><a href="api/mediatypetest">Show Media Message</a>
 		<li><a href="api/msg">Get All Message</a>
 		<li><a href="api/msg/json">Get All Message in JSON Format</a>
